[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "microgrid-env"
version = "1.0.0"
description = "AI Custodire Resilience Engine for Next-Gen Microgrids"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "openenv-core>=0.1.0",
]

[project.scripts]
server = "server.app:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["microgrid_env*", "server*"]
